# gravibumpers-Rust

./: .gitignore  README.md  timings.txt
gravibumpers/: Cargo.toml
gravibumpers/configuration_files/: big_ring_saturn_with_one_moon_double_boxed.json  big_ring_saturn_with_one_moon_mixed_boxed.json  big_ring_saturn_with_one_moon_no_boxing.json  big_ring_saturn_with_one_moon_single_boxed.json  bowling.json  brief_big_ring_saturn_with_one_moon_double_boxed.json  brief_big_ring_saturn_with_one_moon_mixed_boxed.json  brief_big_ring_saturn_with_one_moon_mixed_boxed_with_junk.json  brief_big_ring_saturn_with_one_moon_no_boxing.json  brief_big_ring_saturn_with_one_moon_no_boxing_with_junk.json  brief_big_ring_saturn_with_one_moon_single_boxed.json  circle.json  extremely_big_ring_saturn_with_one_moon_mixed_boxed.json  extremely_big_ring_saturn_with_one_moon_no_boxing.json  gravibowling.json  inverse_bowling.json  saturn_with_one_moon.json  two_and_a_half_circles.json  two_circles.json  two_circles_and_a_single_point.json
gravibumpers/configuration_parsing/: Cargo.toml
gravibumpers/configuration_parsing/src/: lib.rs
gravibumpers/data_structure/: Cargo.toml
gravibumpers/data_structure/src/: charge.rs  collection.rs  color.rs  comparison.rs  force.rs  lib.rs  particle.rs  position.rs  time.rs  velocity.rs
gravibumpers/initial_conditions/: Cargo.toml
gravibumpers/initial_conditions/src/: circle.rs  lib.rs  single.rs
gravibumpers/src/: main.rs
gravibumpers/time_evolution/: Cargo.toml
gravibumpers/time_evolution/src/: lib.rs  second_order_euler.rs  test_functions.rs  vec_of_pure_struct.rs
gravibumpers/visual_representation/: Cargo.toml
gravibumpers/visual_representation/src/: apng.rs  brightness_aggregator.rs  color.rs  demonstration.rs  lib.rs  particles_to_pixels.rs
(+4 files in other folders)
