[package]
name = "gravibumpers"
version = "0.1.0"
authors = ["Ben O'Leary"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
initial_conditions = { path = "initial_conditions" }
time_evolution = { path = "time_evolution" }
visual_representation = { path = "visual_representation" }