[package]
name = "initial_conditions"
version = "0.1.0"
authors = ["Ben O'Leary <benjamin.oleary@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
configuration_parsing = { path = "../configuration_parsing" }
data_structure = { path = "../data_structure" }
